@@ -2,13 +2,19 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Quartz1.5.2"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JRobin1.4.0"/>
+	<classpathentry excluding="script_backup/" kind="src" path="script"/>
+	<classpathentry kind="src" path="models"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JDom1.0"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JRobin1.4.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JUnit"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/junit-addons-1.4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jython"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.5.0"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jetty6b12"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Quartz1.5.2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/RXTX2.1-7"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xmlunit1.0"/>
+	<classpathentry exported="true" kind="lib" path="bin-groovy"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Groovy1.0"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jetty6.1"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
