@@ -2,20 +2,18 @@
         <DESC>The BI demonstration CBUS system</DESC>
  
         !-- ______________________________________  CBUS DEFS  ____________________  -->
-        <DEVICE ACTIVE="N" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="CBUS" DESCRIPTION="CBUS Lights">
                 <CONNECTION>
                         <SERIAL ACTIVE="N" PORT="COM1" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
                         <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" SUPPORTS_CD="N" FLOW="RTSCTS" />
                         <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="4999"/>
-                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.6" PORT="10001"/>
-                        <IP ACTIVE="N" IP_ADDRESS="172.16.3.204" PORT="10001"/>
-                        <IP ACTIVE="N" IP_ADDRESS="172.16.3.215" PORT="4999"/>
-                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5004"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="192.168.1.6" PORT="10001"/>
+                        <IP ACTIVE="N" IP_ADDRESS="127.0.0.1" PORT="5004"/>
                 </CONNECTION>
                 
                 <PARAMETERS>
                 	<!-- ITEM NAME="POLL_TEMP_INTERVAL" VALUE="5" / -->
-                	<ITEM NAME="DECIMAL_KEYS" VALUE="N" />
+                	<ITEM NAME="DECIMAL_KEYS" VALUE="Y" />
                 </PARAMETERS>
                 
                 <CBUS>
@@ -51,7 +49,7 @@
                         <LABEL ACTIVE="N" KEY="22"   NAME="DLT 1"  DISPLAY_NAME="DLT1" DEFAULT_LABEL_KEY = "ON" />
                         <LABEL ACTIVE="Y" KEY="22" NAME="DLT 1"  DISPLAY_NAME="DLT_1" DEFAULT_LABEL_KEY="ON" />
                         
-                        <LABEL ACTIVE="Y" KEY="12"   NAME="DLT 2" DISPLAY_NAME="DLT_2" DEFAULT_LABEL_KEY="CD1"  />
+                        <LABEL ACTIVE="Y" KEY="23"   NAME="DLT 2" DISPLAY_NAME="DLT_2" DEFAULT_LABEL_KEY="CD1"  />
                         <LABEL ACTIVE="Y" KEY="2"   NAME="DLT 3"  DISPLAY_NAME="DLT3" DEFAULT_LABEL_KEY="FRONT_LIGHT" />
                         <LABEL ACTIVE="Y" KEY="3"   NAME="DLT 4"  DISPLAY_NAME="DLT4"  />
                         <LABEL ACTIVE="Y" KEY="200"   NAME="DLT 5" DISPLAY_NAME="DLT5"  />
