@@ -1,4 +1,1 @@
-<SCRIPT_STATUS>
-  <SCRIPT NAME="PoolPump" ENABLED="enabled" STATUS="" />
-  <SCRIPT NAME="TestPoolPump" ENABLED="enabled" STATUS="" />
-</SCRIPT_STATUS>
+<SCRIPT_STATUS />
