@@ -1,48 +1,0 @@
-import sys
-import time
-from time import strftime
-
-elife.fireScriptOn("MEETING_PIR")
-savePower = "MEETING_ROOM_LIGHTS"
-saveDelay = 20
-light = 0
-lightVal = elife.getValue(savePower)
-if lightVal == "None" or lightVal == "":
-    lightOn = elife.getCommand(savePower)
-    # print lightOn
-    if lightOn == "on":
-        light = 100
-    else:
-        light = 0
-else:
-    light = int(lightVal)
-if light > 0:
-    #elife.log("Light is on already")
-    #replace MEETING_PIR with PIR displayname
-    b = elife.getLastAccessTime("MEETING_PIR")
-    time.sleep(saveDelay)
-    c = elife.getLastAccessTime("MEETING_PIR")
-    pause = ((c-b)/1000)
-    while pause < saveDelay:
-	time.sleep(1)
-	c = c + 1000
-	pause = ((c-b)/1000)
-    #turn off light or dim
-    elife.off(savePower)
-else:
-    elife.on(savePower)
-    #elife.log("Light was off")
-    #replace MEETING_PIR with PIR displayname
-    b = elife.getLastAccessTime("MEETING_PIR")
-    time.sleep(saveDelay)
-    c = elife.getLastAccessTime("MEETING_PIR")
-    j = elife.getValue("MEETING_PIR")
-    #elife.log(str(j))
-    pause = ((c-b)/1000)
-    while pause < saveDelay:
-	    time.sleep(1)
-	    c = c + 1000
-	    pause = ((c-b)/1000)
-    #turn off light or dim
-    elife.off(savePower)
-#elife.log("finished script now.....") 
