@@ -1,3 +1,0 @@
-import sys
-#elife.fireScriptOn("FAMILY_LIGHT")
-#elife.getGraph("rrdtestGraph","rrdtestGraph",880,450)
