@@ -1,5 +1,0 @@
-import sys
-import time
-elife.on("LOUNGE_LIGHT")
-time.sleep(1)
-elife.off("LOUNGE_LIGHT")
