@@ -1,4 +1,0 @@
-import sys
-import time
-
-elife.on  ("DINING_LIGHT" , "100")
