@@ -1,3 +1,0 @@
-import sys
-#elife.fireScriptOn("LOUNGE_LIGHT")
-elife.incrementVariable("HOLD1")
