@@ -1,4 +1,0 @@
-import sys
-#elife.fireScriptOn("GARAGE_LIGHT")
-a = elife.getVariable("HOLD1")
-print a
