@@ -1,5 +1,0 @@
-import sys
-import time
-print "start Hi there from timer test"
-a = do.getLastAccessTimeDuration("LOUNGE_LIGHT","minute")
-print a
