@@ -1,7 +1,0 @@
-import sys
-import time
-#a = elife.getCommand("DINING_LIGHT")
-#elife.fireScriptOn("DINING_LIGHT")
-# listenMacro("DINING_LIGHT")
-#elife.log("Asked for volume up")
-#elife.createCommand("LIVING_AUDIO","volume","down")
